--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>{% block title %}formd title{% endblock %}</title>
 		{% block css %}
-			<link href='http://fonts.googleapis.com/css?family=Dosis:200,400' rel='stylesheet' type='text/css'>
+			<link href='//fonts.googleapis.com/css?family=Dosis:200,400' rel='stylesheet' type='text/css'>
 			<link rel="stylesheet" type="text/css" href="{% static 'css/normalize.css' %}">
 			<link rel="stylesheet" type="text/css" href="{% static 'css/site.css' %}">
 		{% endblock %}
